--- a/web-version.html
+++ b/web-version.html
@@ -5,10 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/bb1d08a9b2.js" crossorigin="anonymous"></script>
-<script src="jquery-3.7.0.min.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/Reed-Quest/text-annotator/main/styles.css">
 
 </head>
 <body>
@@ -83,7 +82,7 @@
         </div>
     </div>
 
-    <script src="dict.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://raw.githubusercontent.com/Reed-Quest/text-annotator/main/dict.js"></script>
+    <script src="https://raw.githubusercontent.com/Reed-Quest/text-annotator/main/script.js"></script>
 </body>
 </html>
