--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="row">
+    <div class="row" style="height: 1300px;">
         <div class="page-main">
             <div class="content-block">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
