--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Text Annotator - Template</title>
+<title>Text Annotator - Template</title> <!--Replace with your own title-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/bb1d08a9b2.js" crossorigin="anonymous"></script>
-<script src="jquery-3.7.0.min.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./styles.css">
 
 </head>
 <body>
-    <div class="row" style="height: 1300px;">
+    <div class="row" style="height: 1300px;"> <!--Manually replace this with a height matching the length of your text.-->
         <div class="page-main">
             <div class="content-block">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -77,13 +76,14 @@
             </div>
         </div>
         <div class="page-sidebar">
-            <div class="annotation" id="test">
+            <div class="annotation">
                 <p>And this is some text</p>
             </div>
         </div>
     </div>
 
-    <script src="dict.js"></script>
+    <script src="./dicts/template_dict.js"></script> <!--Replace this with a reference to your own dictionary with exactly one output for each key. 
+        Keys should exactly match the text of each anchor tag.-->
     <script src="./script.js"></script>
 </body>
 </html>
