fixed scroll y bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <div class="row" style="height: 1300px;"> <!--Manually replace this with a height matching the length of your text.-->
+    <div class="row"> <!--Manually replace this with a height matching the length of your text.-->
         <div class="page-main">
             <div class="content-block">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
