--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </div>
         <div class="page-sidebar">
             <div class="annotation">
-                <p>And this is some text</p>
+                <p>And this is some text lit quis odio maximus, a posuere diam sollicitudin. Proin et 
+                    tempor ligula. Aliquam tellus lor</p>
             </div>
         </div>
     </div>
